@@ -1,0 +1,128 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html><head>
+<title>treasure coast arts/crafts for sale classifieds - craigslist</title>
+
+<meta name="description" content="craigslist arts/crafts for sale classifieds for treasure coast ">
+<meta name="keywords" content="treasure coast arts/crafts for sale craigslist, classifieds, want ads ">
+
+
+
+<link rel=alternate type="application/rss+xml" href="index.rss" title="RSS feed for craigslist | arts/crafts for sale in treasure coast ">
+<link rel="stylesheet" title="craigslist" href="http://www.craigslist.org/styles/craigslist.css" type="text/css" media="all">
+</head>
+
+<body class="toc">
+
+<a name="top"></a>
+
+<div class="bchead"><span id="ef">
+			
+			[ <a href="http://www.craigslist.org/about/help/">help</a> ]
+			[ <a href="https://post.craigslist.org/psl/S">post</a> ]</span>
+			
+				<a href="/"> treasure coast craigslist</a>  &gt; <a href="/art/">arts/crafts for sale</a></div>
+
+<blockquote>
+<form action="/search/art" method="get" onsubmit="ckCAbb();">
+
+	<script type="text/javascript"><!--
+		function ckCAbb() {
+			t = document.getElementById("cAbb");
+			if (t.value == "art") { t.disabled = true; }
+		}
+	-->
+	</script>
+
+	<table width="95%" cellpadding="2" style="white-space: nowrap; background:#eee; border:1px solid gray;" summary="">
+		<tr>
+			<td align="right" width="1">search for:</td>
+			<td width="30%"><input id="query" name="query" size="30" value=""> in:
+				<select id="cAbb" name="catAbbreviation">
+<option value="ccc">all community<option value="eee">all event<option value="sss">all for sale / wanted<option disabled value="">--<option value="art" selected>   art &amp; crafts
+<option value="pts">   auto parts
+<option value="bab">   baby &amp; kid stuff
+<option value="bar">   barter
+<option value="bik">   bicycles
+<option value="boa">   boats
+<option value="bks">   books
+<option value="bfs">   business
+<option value="cta">   cars &amp; trucks - all
+<option value="ctd">   cars &amp; trucks - by dealer
+<option value="cto">   cars &amp; trucks - by owner
+<option value="emd">   cds / dvds / vhs
+<option value="clo">   clothing
+<option value="clt">   collectibles
+<option value="sys">   computers &amp; tech
+<option value="ele">   electronics
+<option value="grd">   farm &amp; garden
+<option value="zip">   free stuff
+<option value="fua">   furniture - all
+<option value="fud">   furniture - by dealer
+<option value="fuo">   furniture - by owner
+<option value="tag">   games &amp; toys
+<option value="gms">   garage sales
+<option value="for">   general
+<option value="hsh">   household
+<option value="wan">   items wanted
+<option value="jwl">   jewelry
+<option value="mat">   materials
+<option value="mcy">   motorcycles/scooters
+<option value="msg">   musical instruments
+<option value="pho">   photo/video
+<option value="rvs">   recreational vehicles
+<option value="spo">   sporting goods
+<option value="tix">   tickets
+<option value="tls">   tools
+<option disabled value="">--<option value="ggg">all gigs<option value="hhh">all housing<option value="jjj">all jobs<option value="ppp">all personals<option value="res">all resume<option value="bbb">all services offered</select>
+				<input type="submit" value="Search">
+			</td><td>
+				<label><input type="checkbox" name="srchType" value="T"
+					title="check this box to search only posting titles"> only search titles</label>
+			</td>
+		</tr>
+	
+		<tr>
+			<td align="right" width="1">price:</td>
+			<td><input name="minAsk" size="6" value="min" onfocus="value=''">&nbsp;<input name="maxAsk" size="6" value="max" onfocus="value=''">&nbsp;</td>
+			<td align="left"><label><input type="checkbox" name="hasPic" value="1"> has image</label></td>
+		</tr></table></form></blockquote><span id="showPics"></span><span id="hidePics"></span>
+
+<blockquote>
+<table width="95%" summary="">
+        <tr>
+        	<td valign="top">[ Mon, 08 Jun 17:37:29 ]</td>
+			<td valign="top" id="messages"><span class="hl"> [ <a href="http://www.recalls.gov/">avoid recalled items</a> ] </span> <span class="hl"> [ <a href="/about/prohibited.items">partial list of prohibited items</a> ] </span> <span class="hl"> [<a href="/cgi-bin/success.stories.cgi">success story?</a>]</span> <span class="hl"> [ <b><a href="/about/scams">AVOIDING SCAMS &amp; FRAUD</a></b> ] </span> <span class="hl"> [ <b><a href="/about/safety">PERSONAL SAFETY TIPS</a></b> ] </span> </td>
+        </tr>
+</table>
+
+
+
+
+
+<div id="footer">
+	<hr>
+	<span id="copy">
+		Copyright &copy; 2009 craigslist, inc.<br>
+		<a href="#top">Back to top of page</a>
+	</span>
+	<span class="rss">
+		<a class="l" href="http://treasure.craigslist.org/art/index.rss">RSS</a>
+		<a href="http://www.craigslist.org/about/rss">(?)</a><br>
+		<a class="y" href="http://add.my.yahoo.com/rss?url=http://treasure.craigslist.org/art/index.rss">add to My Yahoo!</a>  
+	</span>
+</div>
+<br><br>
+
+<div id="floater">&nbsp;</div>
+
+</blockquote>
+<script type="text/javascript" src="http://www.craigslist.org/js/jquery.js"></script><script type="text/javascript" src="http://www.craigslist.org/js/tocs.js"></script>
+<script type="text/javascript">
+<!--
+	initImgs();
+-->
+</script>
+
+
+</body>
+</html>
