@@ -6,6 +6,7 @@
 - Apparently Craigslist starting gzip-encoding *some* listings. Added gzip decoding support
 - Found a bug when parsing the location field on some full_posts in the apa sections
 - Added support for file:// uri's int he scrape_* functions, and revised the tests to use these uri's
+- Fixed a bug that caused errors to be raised with legitimately empty listing pages
 
 === Release 0.6.0 (May 21, 2009)
 - Added PostFull::flagged_for_removal?
